# Gipop

./: .gitignore  Cargo.toml  README.md
docs/: SIIP_Scene.drawio
hal/: Cargo.toml
hal/src/: _example_main.rs  ctrl_loop.rs  enocean_driver.rs  io_defs.rs  lib.rs  main.rs  term_cfg.rs
opcua/: Cargo.toml
opcua/src/: main.rs  shared.rs
plc/: Cargo.toml
plc/src/: ctrl_loop.rs  logic.rs  main.rs  shared.rs
