[workspace]
resolver = "2"
members = ["hal", "plc"]
exclude = ["opcua"]

[package]
name = "gipop"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gipop_plc"
path = "plc/src/main.rs"

[dependencies]
hal = {path = "hal"}
ethercrab = { path = "/home/ander/SIIP_project/ethercrab-main/ethercrab" }
signal-hook = "0.3.17"
tokio = { version = "1.33.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
smol = "2.0.0"
env_logger = "0.11.6"
log = "0.4.27"
bitvec = {version = "1.0.1", features = ["serde"]}
anyhow = "1.0.98"
async-executor = "1.13.1"
enum-iterator = "2.1.0"
memmap2 = "0.9.5"
bytemuck = {version = "1.23.0", features = ["derive"]}
async-io = "2.4.0"